posiGen_FullsendBox/src/objects/Rejection__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Rejections</relationshipLabel>
        <relationshipName>Rejections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <inlineHelpText>Legal = legal documents that maybe need to prove ownership, or power of attorney</inlineHelpText>
        <label>Legal</label>
        <picklist>
            <picklistValues>
                <fullName>Trust (Revocable/Irrevocable)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power of Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judgement of Possession/Will/Succession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Sales/Deed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Mismatched_information__c</fullName>
        <inlineHelpText>Mismatched information = different dates on the paperwork or different addresses on the utility bill then paperwork.</inlineHelpText>
        <label>Mismatched information</label>
        <picklist>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Missing_Documents__c</fullName>
        <inlineHelpText>Missing Documents = a missing document that is required</inlineHelpText>
        <label>Missing Documents</label>
        <picklist>
            <picklistValues>
                <fullName>Copy of Declaration of Insurance (CT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driver license or Expired driver’s license</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State documents (Green Bank, 1086, NYSERDA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permit Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH missing information</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Missing_Info_in_Salesforce__c</fullName>
        <description>Missing Info in Salesforce = missing information on the Opportunity from application, missing photos of home or missing pin drop.</description>
        <inlineHelpText>Missing Info in Salesforce = missing information on the Opportunity from application, missing photos of home or missing pin drop.</inlineHelpText>
        <label>Missing Info in Salesforce</label>
        <picklist>
            <picklistValues>
                <fullName>Wrong Social Security Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing pin drop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Address (CT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>References</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kwh usage (CT &amp; NY)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Misspelling_Wrong_Info__c</fullName>
        <inlineHelpText>Misspelling/Wrong Info = any information that is misspelled on the documents.</inlineHelpText>
        <label>Misspelling/Wrong Info</label>
        <picklist>
            <picklistValues>
                <fullName>Customer’s name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong/incorrect zip code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other See Comments</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Net_Meter__c</fullName>
        <inlineHelpText>Net Meter = something wrong with the net meter application, wrong application or missing/blurry utility bill.</inlineHelpText>
        <label>Net Meter</label>
        <picklist>
            <picklistValues>
                <fullName>Net Meter application not signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong application turned in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing utility bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blurry/Cut off copy of bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill over 3 months old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Authorization (CT &amp; NY)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Opp_Owner__c</fullName>
        <label>Opp Owner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Rejections</relationshipLabel>
        <relationshipName>Rejections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Admin__c</fullName>
        <label>Sales Admin</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Send_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Notification</label>
        <type>Checkbox</type>
    </fields>
    <label>Rejection</label>
    <nameField>
        <displayFormat>RJ{00000}</displayFormat>
        <label>Rejection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rejections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>